--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ cloudinary==1.40.0
 contextlib2==21.6.0
 coreapi==2.3.3
 coreschema==0.0.4
-cryptography==41.0.7
+cryptography>=43.0.1
 defusedxml==0.7.1
 dj-database-url==2.1.0
 dj-rest-auth==5.0.2
@@ -16,13 +16,13 @@ django-allauth==0.58.2
 django-cloudinary-storage==0.3.0
 django-cors-headers==4.3.1
 django-rest-swagger==2.2.0
-djangorestframework==3.14.0
+djangorestframework>=3.15.2
 drf-yasg==1.21.7
-gunicorn==21.2.0
+gunicorn==22.0.0
 idna==3.6
 inflection==0.5.1
 itypes==1.2.0
-Jinja2==3.1.2
+jinja2>=3.1.4
 MarkupSafe==2.1.3
 oauthlib==3.2.2
 openapi-codec==1.3.2
@@ -36,14 +36,14 @@ python-decouple==3.8
 python3-openid==3.2.0
 pytz==2023.3.post1
 PyYAML==6.0.1
-requests==2.31.0
+requests>=2.32.0
 requests-oauthlib==1.3.1
 schema==0.7.5
 simplejson==3.19.2
 six==1.16.0
-sqlparse==0.4.4
+sqlparse==0.5.0
 typing_extensions==4.9.0
 tzdata==2023.3
 uritemplate==4.1.1
-urllib3==2.2.1
+urllib3>=2.2.2
 whitenoise==6.6.0
