--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 africastalking==1.2.7
 asgiref==3.8.1
-certifi==2023.11.17
+certifi>=2024.07.04
 cffi==1.16.0
 charset-normalizer==3.3.2
 cloudinary==1.40.0
@@ -19,7 +19,7 @@ django-rest-swagger==2.2.0
 djangorestframework>=3.15.2
 drf-yasg==1.21.7
 gunicorn==22.0.0
-idna==3.6
+idna==3.7
 inflection==0.5.1
 itypes==1.2.0
 jinja2>=3.1.4
